[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine"
dynamic = ["version"]
description = "A Flexible Static Site Generator for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2",
  "markdown2",
  "more-itertools",
  "pluggy",
  "python-dateutil",
  "python-frontmatter",
  "python-slugify",
  "render-engine-parser",
  "render-engine-markdown",
  "rich",
]

[project.optional-dependencies]
cli = ["render-engine-cli"]
extras = ["render-engine-sitemap"]

[dependency-groups]
dev = [
  "ephemeral-port-reserve",
  "httpx",
  "ty",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "toml",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/render_engine/__version__.py"
# version_scheme = "python-simplified-semver"

[project.urls]
homepage = "https://github.com/render-engine/render-engine/"
repository = "https://github.com/render-engine/render-engine/"
documentation = "https://render-engine.readthedocs.io/en/latest/"

[tool.setuptools.package-data]
"*" = ["*.html", "*.txt", "*.xml", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--cov=src", "--cov-report=term-missing", "-ra", "-q"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.rules]
unresolved-import = "warn"
