[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine"
dynamic = ["version"]
description = "A Flexible Static Site Generator for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2==3.1.6",
  "more-itertools==10.8.0",
  "pluggy==1.6.0",
  "python-dateutil==2.9.0.post0",
  "python-frontmatter==1.1.0",
  "python-slugify==8.0.4",
  "render-engine-markdown==2023.12.1",
  "rich==14.3.1",
]

[project.optional-dependencies]
cli = ["render-engine-cli==2025.11.1"]
extras = ["render-engine-sitemap==2024.1.1a1"]

[dependency-groups]
dev = [
  "ephemeral-port-reserve==1.1.4",
  "deptry>=0.24.0",
  "httpx==0.28.1",
  # TODO: Update typing with new versions in 0.0.24
  # Issue URL: https://github.com/render-engine/render-engine/issues/1142
  "ty==0.0.14",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
  "toml==0.10.2",
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.6",
  "mkdocs-multirepo-plugin==0.8.3",
  "mkdocstrings[python]==1.0.3",
  "pymdown-extensions==10.21",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/render_engine/__version__.py"
# version_scheme = "python-simplified-semver"

[project.urls]
homepage = "https://github.com/render-engine/render-engine/"
repository = "https://github.com/render-engine/render-engine/"
documentation = "https://render-engine.readthedocs.io/en/latest/"

[tool.setuptools.package-data]
"*" = ["*.html", "*.txt", "*.xml", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--cov=src", "--cov-report=term-missing", "-ra", "-q"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.rules]
unresolved-import = "warn"

[tool.deptry]
pep621_dev_dependency_groups = ["cli", "extras"]
